--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -54,11 +54,19 @@
     color: white;
     border-radius: 10px;
 }
-
+#boton2:link{
+    color: white;
+}
+#boton2:visited{
+    color: white;
+}
 .boton2 {
     background-color: green;
     border: solid 1px white;
     font-family: 'Times New Roman', Times, serif;
     color: white;
     border-radius: 10px;
+    
 }
+
+
