--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,7 +3,7 @@
     text-shadow: 2px 1px 2px black;
     text-align: right;
 }
-
+a{text-decoration: none;}
 .textonavbar {
     font-size: 12px;
 }
